--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TnvProjectAndroid">
+        <activity android:name=".GestioneUtenti"></activity>
+        <activity android:name=".HomeAdmin" />
         <activity android:name=".Registrazione" />
         <activity android:name=".Home_User" />
         <activity android:name=".ModificaPassword" />
